--- a/examples/md-flexible/input/Variable-Verlet-List.yaml
+++ b/examples/md-flexible/input/Variable-Verlet-List.yaml
@@ -3,39 +3,39 @@ traversal                        :  [lc_sliced, lc_sliced_balanced, lc_sliced_c0
 data-layout                      :  [AoS, SoA]
 newton3                          :  [disabled, enabled]
 verlet-rebuild-frequencies       :  [10]
-verlet-skin-radius-per-timestep  :  0.01
+verlet-skin-radius-per-timestep  :  0.2
 verlet-cluster-size              :  3
 selector-strategy                :  Fastest-Mean-Value
-tuning-strategy                  :  full-search
-tuning-interval                  :  1000
-tuning-samples                   :  48
+tuning-strategy                  :  predictive-tuning
+tuning-interval                  :  2000
+tuning-samples                   :  6
 functor                          :  Lennard-Jones-AVX2
 cutoff                           :  2
-box-min                          :  [-1, -1, -1]
-box-max                          :  [6, 16, 6]
+box-min                          :  [0, 0, 0]
+box-max                          :  [400, 200, 200]
 cell-size                        :  [1]
-deltaT                           :  0.0001
-iterations                       :  10000
+deltaT                           :  0.002
+iterations                       :  1000
 boundary-type                    : [periodic,periodic,periodic]
 Objects:
   CubeClosestPacked:
     0:
-      box-length                 :  [5, 5, 5]
-      bottomLeftCorner           :  [0, 0, 0]
-      particle-spacing           :  1.5
-      velocity                   :  [0, 5, 0]
+      box-length                 :  [10, 10, 10]
+      bottomLeftCorner           :  [195, 85, 95]
+      particle-spacing           :  1
+      velocity                   :  [0, 10, 0]
       particle-type              :  0
       particle-epsilon           :  1
       particle-sigma             :  1
       particle-mass              :  1
     1:
-      box-length                  : [5, 5, 5]
-      bottomLeftCorner            : [0, 10, 0]
-      particle-spacing            : 1.5
-      velocity                    : [ 0, -5, 0 ]
+      box-length                  : [20, 10, 10]
+      bottomLeftCorner            : [190, 125, 95]
+      particle-spacing            : 0.9
+      velocity                    : [ 0, -20, 0 ]
       particle-type               : 1
       particle-epsilon            : 1
-      particle-sigma              : 1
+      particle-sigma              : 0.9
       particle-mass               : 1
 no-flops                         :  false
 no-end-config                    :  true
