make Eigen3 a public dependency, otherwise Math.h is not usable

--- a/src/autopas/CMakeLists.txt
+++ b/src/autopas/CMakeLists.txt
@@ -23,9 +23,10 @@ target_link_libraries(
         spdlog::spdlog
         $<$<OR:$<BOOL:${AUTOPAS_INTERNODE_TUNING}>,$<BOOL:${MD_FLEXIBLE_USE_MPI}>>:MPI::MPI_CXX>
         $<$<BOOL:${AUTOPAS_INCLUDE_MPI}>:MPI::MPI_CXX>
+        Eigen3
     PRIVATE
         # harmony and Eigen3 are only needed privately when building AutoPas.
-        harmony Eigen3
+        harmony
 )
 
 # Ompstuff needs to be here because autopas_OpenMP.cmake needs to run before this file to create to OpenMP
