--- a/examples/md-flexible/input/SpinodalDecomposition_equilibration.yaml
+++ b/examples/md-flexible/input/SpinodalDecomposition_equilibration.yaml
@@ -2,7 +2,7 @@ functor                          :  Lennard-Jones (12-6)
 cutoff                           :  2.5
 deltaT                           :  0.00182367
 iterations                       :  100000
-periodic-boundaries              :  true
+boundary-type                    :  [periodic, periodic, periodic]
 Objects:
   CubeGrid:
     0:
