--- a/examples/md-flexible/input/explodingLiquid.yaml
+++ b/examples/md-flexible/input/explodingLiquid.yaml
@@ -16,7 +16,7 @@ box-max                          :  [15, 60, 15]
 cell-size                        :  [1]
 deltaT                           :  0.00182367
 iterations                       :  12000
-periodic-boundaries              :  true
+boundary-type                    :  [periodic, periodic, periodic]
 Objects:                         
   CubeClosestPacked:
     0:  
