--- a/examples/md-flexible/input/testTimePerTraversal/testInputExamples/Case44.yaml
+++ b/examples/md-flexible/input/testTimePerTraversal/testInputExamples/Case44.yaml
@@ -7,7 +7,7 @@ cutoff                           :  2
 deltaT                           :  0
 # 138 tuning iterations + 50 to observe choses configuration
 iterations                       :  50
-periodic-boundaries              :  false
+boundary-type                    :  [none, none, none]
 Objects:
   CubeUniform:
     0:
