Added vtk-output-folder line to test the fix

--- a/examples/md-flexible/input/fallingDrop.yaml
+++ b/examples/md-flexible/input/fallingDrop.yaml
@@ -49,6 +49,7 @@ Objects:
 #   addBrownianMotion              :  false
 vtk-filename                     :  fallingDrop
 vtk-write-frequency              :  1000
+vtk-output-folder                :  vtkOutputFolder
 no-flops                         :  false
 no-end-config                    :  true
 log-level                        :  info
