--- a/examples/md-flexible/input/fallingDropStatic.yaml
+++ b/examples/md-flexible/input/fallingDropStatic.yaml
@@ -1,6 +1,6 @@
 container                        :  [VerletLists]
-verlet-rebuild-frequency         :  12
-verlet-skin-radius-per-timestep  :  0.05
+verlet-rebuild-frequency         :  24
+verlet-skin-radius-per-timestep  :  0.025
 verlet-cluster-size              :  4
 selector-strategy                :  Fastest-Absolute-Value
 data-layout                      :  [AoS]
@@ -47,8 +47,8 @@ Objects:
 #   deltaTemperature               :  0.1
 #   thermostatInterval             :  10
 #   addBrownianMotion              :  false
-vtk-filename                     :  fallingDropDynamic
-vtk-write-frequency              :  100
+vtk-filename                     :  fallingDropStatic
+vtk-write-frequency              :  100000
 no-flops                         :  false
 no-end-config                    :  true
 log-level                        :  error
