Refactored Verlet Lists to have similar structure like vlc with different neighbor lists

--- a/examples/md-flexible/input/testDynamicVerletLists/explodingLiquidStatic.yaml
+++ b/examples/md-flexible/input/testDynamicVerletLists/explodingLiquidStatic.yaml
@@ -20,7 +20,7 @@ boundary-type                    :  [periodic, periodic, periodic]
 Objects:
   CubeClosestPacked:
     0:
-      box-length                 :  [15, 6, 15]
+      box-length                 :  [15, 15, 15]
       bottomLeftCorner           :  [0, 27, 0]
       particle-spacing           :  1.
       velocity                   :  [0, 0, 0]
@@ -31,5 +31,5 @@ Objects:
 no-flops                         :  false
 no-end-config                    :  true
 no-progress-bar                  :  false
-vtk-filename                     :  explodingLiquidStatic
+vtk-filename                     :  explodingLiquidDenseStaticNew
 vtk-write-frequency              :  100
