Added possibility to dynamically enable / disable warnings about fast particles via yaml input

--- a/examples/md-flexible/input/testDynamicVerletLists/explodingLiquidDynamic.yaml
+++ b/examples/md-flexible/input/testDynamicVerletLists/explodingLiquidDynamic.yaml
@@ -33,3 +33,4 @@ no-end-config                    :  true
 no-progress-bar                  :  false
 vtk-filename                     :  explodingLiquidDenseDynamicNew
 vtk-write-frequency              :  100
+fast-particle-warn               :  false
