--- a/examples/md-flexible/input/SpinodalDecomposition_equilibration.yaml
+++ b/examples/md-flexible/input/SpinodalDecomposition_equilibration.yaml
@@ -13,7 +13,7 @@ Sites:
 Objects:
   CubeGrid:
     0:
-      molecule-id                :  0
+      site-id                    :  0
       particles-per-dimension    :  [160, 160, 160]
       particle-spacing           :  1.5
       bottomLeftCorner           :  [0, 0, 0]
