Added handling for multiple md-flexible types as cmake options

--- a/examples/md-flexible/CMakeLists.txt
+++ b/examples/md-flexible/CMakeLists.txt
@@ -16,7 +16,25 @@ option(MD_FLEXIBLE_USE_MPI "Enable MPI parallelism for md-flexible." OFF)
 
 target_link_libraries(md-flexible PUBLIC autopas autopasTools yaml-cpp  ${ALL_LIB} $<$<BOOL:${MD_FLEXIBLE_USE_MPI}>:MPI::MPI_CXX>)
 
-option(MD_FLEXIBLE_USE_MULTI_SITE "Enable use of multi-site molecule types, rotational integration, and compile multi-site variants of functors." OFF)
+# Set CMake option for md-flexible mode
+set(MD_FLEXIBLE_MODE
+        "SINGLE-SITE"
+        CACHE
+        STRING "Choose the mode of md-flexible to be compiled."
+        )
+set_property(CACHE MD_FLEXIBLE_MODE PROPERTY STRINGS "SINGLE-SITE;MULTI-SITE")
+
+# Define numerical values for different md-flexible modes
+add_compile_definitions( SINGLESITE=0 )
+add_compile_definitions( MULTISITE=1)
+
+# Define numerical value for actually compiled md-flexible mode, as per above.
+if (MD_FLEXIBLE_MODE MATCHES "SINGLE-SITE")
+    add_compile_definitions( MD_FLEXIBLE_MODE=0)
+elseif(MD_FLEXIBLE_MODE MATCHES "MULTI-SITE")
+    add_compile_definitions( MD_FLEXIBLE_MODE=1)
+endif()
+
 option(MD_FLEXIBLE_FUNCTOR_AUTOVEC "Compile AutoVec Functor without calculation of global values." OFF)
 option(MD_FLEXIBLE_FUNCTOR_AUTOVEC_GLOBALS "Compile AutoVec Functor with calculation of global values." OFF)
 option(MD_FLEXIBLE_FUNCTOR_AVX "If instruction set is available, compile AVX Functor without calculation of global values." ON)
@@ -25,7 +43,6 @@ option(MD_FLEXIBLE_FUNCTOR_SVE "If instruction set is available, compile SVE Fun
 target_compile_definitions(
         md-flexible
         PUBLIC
-        $<$<BOOL:${MD_FLEXIBLE_USE_MULTI_SITE}>:MD_FLEXIBLE_USE_MULTI_SITE>
         $<$<BOOL:${MD_FLEXIBLE_FUNCTOR_AUTOVEC}>:MD_FLEXIBLE_FUNCTOR_AUTOVEC>
         $<$<BOOL:${MD_FLEXIBLE_FUNCTOR_AUTOVEC_GLOBALS}>:MD_FLEXIBLE_FUNCTOR_AUTOVEC_GLOBALS>
         $<$<BOOL:${MD_FLEXIBLE_FUNCTOR_AVX}>:MD_FLEXIBLE_FUNCTOR_AVX>
@@ -33,7 +50,7 @@ target_compile_definitions(
 )
 
 # --- display warnings if single-/multi-site mode is used with a functor type that has not been implemented ---
-if (MD_FLEXIBLE_USE_MULTI_SITE)
+if (MD_FLEXIBLE_MODE MATCHES "MULTI-SITE")
     if (MD_FLEXIBLE_FUNCTOR_AVX)
         message(STATUS "AVX Lennard-Jones functor has not been implemented for Multi-Site Molecules")
     endif()
