Changed skin factor for falling drop to 1.2 and using avx functor

--- a/examples/md-flexible/input/testDynamicVerletLists/fallingDropStaticExperimental.yaml
+++ b/examples/md-flexible/input/testDynamicVerletLists/fallingDropStaticExperimental.yaml
@@ -1,5 +1,5 @@
 container                        :  [ExperimentalVerletLists]
-verlet-rebuild-frequency         :  4
+verlet-rebuild-frequency         :  8
 verlet-skin-radius-per-timestep  :  0.075
 verlet-cluster-size              :  4
 selector-strategy                :  Fastest-Absolute-Value
@@ -9,7 +9,7 @@ tuning-strategy                  :  full-Search
 tuning-interval                  :  2500
 tuning-samples                   :  3
 tuning-max-evidence              :  10
-functor                          :  Lennard-Jones
+functor                          :  Lennard-Jones (12-6) avx
 newton3                          :  [disabled]
 cutoff                           :  3
 box-min                          :  [0, 0, 0]
