--- a/examples/md-flexible/input/testDynamicVerletLists/fallingDropDynamicExperimental.yaml
+++ b/examples/md-flexible/input/testDynamicVerletLists/fallingDropDynamicExperimental.yaml
@@ -1,6 +1,6 @@
 container                        :  [ExperimentalDynamicVerletLists]
 verlet-rebuild-frequency         :  100
-verlet-skin-radius-per-timestep  :  0.003
+verlet-skin-radius-per-timestep  :  0.006
 verlet-cluster-size              :  4
 selector-strategy                :  Fastest-Absolute-Value
 data-layout                      :  [AoS]
@@ -9,7 +9,7 @@ tuning-strategy                  :  full-Search
 tuning-interval                  :  2500
 tuning-samples                   :  3
 tuning-max-evidence              :  10
-functor                          :  Lennard-Jones
+functor                          :  Lennard-Jones (12-6) avx
 newton3                          :  [disabled]
 cutoff                           :  3
 box-min                          :  [0, 0, 0]
