Rearranging mdLib so that we can move the tests into applicationsLibraries

--- a/applicationLibrary/CMakeLists.txt
+++ b/applicationLibrary/CMakeLists.txt
@@ -1,19 +1,11 @@
 file(
         GLOB_RECURSE
         MY_SRC
-        "*.cpp"
-        "*.h"
-)
-
-file(
-        GLOB_RECURSE
-        CU_SRC
-        "*.cu"
-        "*.cuh"
+        "molecularDynamics/molecularDynamicsLibrary/*.h"
 )
 
 add_library(molecularDynamicsLibrary STATIC ${MY_SRC})
 
 target_link_libraries(molecularDynamicsLibrary PUBLIC autopas)
 
-target_include_directories(molecularDynamicsLibrary PUBLIC ./)
+target_include_directories(molecularDynamicsLibrary PUBLIC ./molecularDynamics)
