--- a/examples/md-flexible/input/testDynamicVerletLists/SpinodalDecomposition_equilibrationLC.yaml
+++ b/examples/md-flexible/input/testDynamicVerletLists/SpinodalDecomposition_equilibrationLC.yaml
@@ -2,14 +2,14 @@ container                        :  [LinkedCells]
 traversal                        :  [lc_sliced, lc_sliced_balanced, lc_sliced_c02, lc_c01, lc_c01_combined_SoA, lc_c04, lc_c04_HCP, lc_c04_combined_SoA, lc_c08, lc_c18]
 data-layout                      :  [AoS]
 newton3                          :  [disabled]
-verlet-rebuild-frequency         :  100
+verlet-rebuild-frequency         :  1000
 verlet-skin-radius-per-timestep  :  0.0025
 verlet-cluster-size              :  4
 selector-strategy                :  Fastest-Mean-Value
 tuning-strategy                  :  predictive-tuning
 tuning-interval                  :  6000
 tuning-samples                   :  10
-functor                          :  Lennard-Jones (12-6)
+functor                          :  Lennard-Jones (12-6) avx
 cutoff                           :  2.5
 deltaT                           :  0.00182367
 iterations                       :  10000
@@ -31,7 +31,7 @@ thermostat:
   deltaTemperature               :  2
   thermostatInterval             :  10
   addBrownianMotion              :  true
-vtk-write-frequency              :  100
+vtk-write-frequency              :  100000
 vtk-filename                     :  SpinodalDecomposition_equilibration_lc
 fast-particle-warn               :  false
 fastParticlesThrow               :  false
