--- a/examples/md-flexible/input/testDynamicVerletListsCells/SpinodalDecomposition_equilibrationStaticCells.yaml
+++ b/examples/md-flexible/input/testDynamicVerletListsCells/SpinodalDecomposition_equilibrationStaticCells.yaml
@@ -9,7 +9,7 @@ selector-strategy                :  Fastest-Mean-Value
 tuning-strategy                  :  predictive-tuning
 tuning-interval                  :  6000
 tuning-samples                   :  10
-functor                          :  Lennard-Jones (12-6)
+functor                          :  Lennard-Jones (12-6) avx
 cutoff                           :  2.5
 deltaT                           :  0.00182367
 iterations                       :  10000
@@ -31,7 +31,7 @@ thermostat:
   deltaTemperature               :  2
   thermostatInterval             :  10
   addBrownianMotion              :  true
-vtk-write-frequency              :  100
+vtk-write-frequency              :  100000
 vtk-filename                     :  SpinodalDecomposition_equilibration_staticCells
 fast-particle-warn               :  true
 fastParticlesThrow               :  true
