--- a/examples/md-flexible/tests/yamlTestFiles/cubeGrid.yaml
+++ b/examples/md-flexible/tests/yamlTestFiles/cubeGrid.yaml
@@ -5,7 +5,7 @@
 Objects:
   CubeGrid:
     0:
-      molecule-id: 0
+      particleTypeId:  0
       particles-per-dimension: [10,10,10]
       particle-spacing: 0.5
       velocity: [0.,0.,0.]
