--- a/examples/md-flexible/input/explodingLiquid.yaml
+++ b/examples/md-flexible/input/explodingLiquid.yaml
@@ -34,8 +34,7 @@ Sites:
 Objects:                         
   CubeClosestPacked:
     0:
-      site-id                    :  0
-#      molecule-id                :  0     # Replace the site-id line with this for multi-site md-flexible
+      particleTypeId             :  0
       box-length                 :  [15, 6, 15]
       bottomLeftCorner           :  [0, 27, 0]
       particle-spacing           :  1.
