--- a/examples/md-flexible/tests/yamlTestFiles/cubeClosestPacked.yaml
+++ b/examples/md-flexible/tests/yamlTestFiles/cubeClosestPacked.yaml
@@ -5,10 +5,7 @@
 Objects:
   CubeClosestPacked:
     0:
-      particle-type              :  0
-      particle-epsilon           :  5.
-      particle-sigma             :  5.
-      particle-mass              :  5.
+      particleTypeId             :  0
       box-length                 :  [6.5, 7., 7.]
       bottomLeftCorner           :  [0., 0., 20.]
       particle-spacing           :  1
