--- a/examples/sphDiagramGeneration/CMakeLists.txt
+++ b/examples/sphDiagramGeneration/CMakeLists.txt
@@ -7,7 +7,7 @@ file(
 
 add_executable(sph-diagram-generation ${MY_SRC})
 
-target_link_libraries(sph-diagram-generation autopas autopasTools)
+target_link_libraries(sph-diagram-generation autopas autopasTools SPHLibrary)
 
 # -----------------test-----------------
 # add check for current target
