--- a/examples/md-flexible/input/testTimePerTraversal/testInputExamples/Case48.yaml
+++ b/examples/md-flexible/input/testTimePerTraversal/testInputExamples/Case48.yaml
@@ -8,6 +8,12 @@ deltaT                           :  0
 # 138 tuning iterations + 50 to observe choses configuration
 iterations                       :  50
 boundary-type                    :  [none, none, none]
+Sites:
+  0:
+    site-id                      :  2
+    site-epsilon                 :  1
+    site-sigma                   :  1
+    site-mass                    :  1
 Objects:
   CubeUniform:
     0:
@@ -15,9 +21,6 @@ Objects:
       box-length                 :  [10, 10, 10]
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
-      particle-type              :  2
-      particle-epsilon           :  1
-      particle-sigma             :  1
-      particle-mass              :  1
+      particleTypeStr            :  2
 no-flops                         :  true
 no-end-config                    :  true
