--- a/examples/md-flexible/input/testTuning/MDFlex_Case1.yaml
+++ b/examples/md-flexible/input/testTuning/MDFlex_Case1.yaml
@@ -10,6 +10,12 @@ cutoff                           :  2
 deltaT                           :  0
 # 138 tuning iterations + 50 to observe chosen configuration
 iterations                       :  188
+Sites:
+  0:
+    site-id                      :  0
+    site-epsilon                 :  1
+    site-sigma                   :  1
+    site-mass                    :  1
 Objects:                         
   CubeGrid:
     0:  
@@ -17,10 +23,7 @@ Objects:
       particle-spacing           :  0.5
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
-      particle-type              :  0
-      particle-epsilon           :  1
-      particle-sigma             :  1
-      particle-mass              :  1
+      particleTypeStr            :  0
 no-flops                         :  true
 no-end-config                    :  true
 
