--- a/examples/md-flexible/input/testTuning/MDFlex_Case2.yaml
+++ b/examples/md-flexible/input/testTuning/MDFlex_Case2.yaml
@@ -12,6 +12,12 @@ deltaT                           :  0
 cell-size                        :  [1.0,1.5,2.0]
 # 792 tuning iterations + 50 to observe chosen configuration
 iterations                       :  842
+Sites:
+  0:
+    site-id                      :  0
+    site-epsilon                 :  1
+    site-sigma                   :  1
+    site-mass                    :  1
 Objects:                         
   CubeGrid:
     0:  
@@ -19,9 +25,6 @@ Objects:
       particle-spacing           :  0.5
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
-      particle-type              :  0
-      particle-epsilon           :  1
-      particle-sigma             :  1
-      particle-mass              :  1
+      particleTypeStr            :  0
 no-flops                         :  true
 no-end-config                    :  true
